updated docs and abstracted string formatting of params
Signed-off-by: Frank Suits <frankst@au1.ibm.com>

--- a/docs/assets/sample_ssp.md.jinja
+++ b/docs/assets/sample_ssp.md.jinja
@@ -27,7 +27,7 @@ in the original catalog
 {{ ssp_md_writer.get_control_statement(control.control.id, 2) }}
 
 
-#### {{ catalog_interface.get_label(control.control) }} Summary information
+#### {{ control_io_writer.get_label(control.control) }} Summary information
 {{ ssp_md_writer.get_fedramp_control_tables(control.control.id, 4) }}
 
 #### What is the solution and how is it implemented?
