--- a/tests/data/jinja/ssp_template.md.jinja
+++ b/tests/data/jinja/ssp_template.md.jinja
@@ -2,6 +2,7 @@ Test SSP
 <!--
 1. Adjust md_clean_include (or make it md_adjust_include) to adjust max header level
 2. (CB) - Add ssp_renderer to jinja.py vars
+3. Decide if you want just Values column or separate 'Values' and 'Labels or Choice' by setting false to true for table
 -->
 
 # A
@@ -28,7 +29,7 @@ Test SSP
 {{ ssp_md_writer.get_control_statement(control.id, 2) }}
 
 #### {{ control_io_writer.get_label(control) }} Summary information
-{{ ssp_md_writer.get_fedramp_control_tables(control.id, 4) }}
+{{ ssp_md_writer.get_fedramp_control_tables(control.id, 4, false) }}
 
 #### Implementation
 {{ ssp_md_writer.get_control_response(control.id, 4)}}
