--- a/docs/assets/sample_ssp.md.jinja
+++ b/docs/assets/sample_ssp.md.jinja
@@ -18,11 +18,11 @@ and implemented requirements in a format similar to a FedRAMP .docx
 The groups are sorted by id and the controls are sorted within each group by sort-id if defined for the control.
 
 The control tables for parameters are output with the param_id in the first column followed either by a single
-'Values' column, or two columns: 'Values' and 'Label or Choice'.  In the one-column case, values are listed if available
+'Values' column, or two columns: 'Values' and 'Label or Choices'.  In the one-column case, values are listed if available
 and if not the descriptive label is shown, unless the parameter has a Select defined, in which case the choice options
 are shown.
 
-In the two-column case the Values column is empty if no values are defined, and the Label or Choice column is either the
+In the two-column case the Values column is empty if no values are defined, and the Label or Choices column is either the
 list of optional choices if the parameter has a Select defined, else just the descriptive label for the parameter.
 
 To choose the one- or two- column option, specify false or true, respectively, as the final parameter in
