--- a/tests/data/jinja/ssp_template.md.jinja
+++ b/tests/data/jinja/ssp_template.md.jinja
@@ -2,7 +2,7 @@ Test SSP
 <!--
 1. Adjust md_clean_include (or make it md_adjust_include) to adjust max header level
 2. (CB) - Add ssp_renderer to jinja.py vars
-3. Decide if you want just Values column or separate 'Values' and 'Labels or Choice' by setting false to true for table
+3. Decide if you want just Values column or separate 'Values' and 'Label or Choices' by setting false to true for table
 -->
 
 # A
