--- a/tests/data/jinja/profile_to_docs_with_group_title.md.jinja
+++ b/tests/data/jinja/profile_to_docs_with_group_title.md.jinja
@@ -1,6 +1,7 @@
 # Control Page
 
-{{ control_writer.write_control_with_sections(control, group_title,
+{{ control_writer.write_control_with_sections(control,
+group_title,
 ['statement', 'objective', 'ExpectedEvidence', 'ImplGuidance', 'table_of_parameters'],
 {
 'statement':'Control Statement Header',
@@ -9,5 +10,9 @@
 'ImplGuidance':'Implementation Guidance',
 'table_of_parameters':'Table of Control Parameters'
 },
-True, True)
+label_column=True,
+add_group_to_title=True,
+param_dict={'ac-2_prm_1': 'AC-2 Test'}
+)
+| safe
 }}
