fix: Fix various issues in markdown docs
Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

--- a/tests/data/jinja/profile_to_docs_with_group_title.md.jinja
+++ b/tests/data/jinja/profile_to_docs_with_group_title.md.jinja
@@ -1,6 +1,7 @@
 # Control Page
 
 {{ control_writer.write_control_with_sections(control,
+profile,
 group_title,
 ['statement', 'objective', 'ExpectedEvidence', 'ImplGuidance', 'table_of_parameters'],
 {
