--- a/tests/data/jinja/profile_to_docs.md.jinja
+++ b/tests/data/jinja/profile_to_docs.md.jinja
@@ -1,3 +1,12 @@
 # Control Page
 
-{{ control_writer.write_control_with_sections(control, group_title, ['statement', 'objective', 'ExpectedEvidence', 'ImplGuidance', 'table_of_parameters'], {'statement':'Control Statement Header', 'objective':'Control Objective Header', 'ExpectedEvidence':'Expected Evidence Header', 'ImplGuidance':'Implementation Guidance', 'table_of_parameters':'Table of Control Parameters'}) }}
+{{
+control_writer.write_control_with_sections(control, profile, group_title,
+['statement', 'objective', 'ExpectedEvidence', 'ImplGuidance', 'table_of_parameters'],
+{'statement':'Statement Header',
+'objective':'Control Objective Header',
+'ExpectedEvidence':'Control Expected Evidence Header',
+'ImplGuidance':'Implementation Guidance',
+'table_of_parameters':'Table of Control Parameters'}
+)
+}}
