fix: Pull display name from the catalog
Signed-off-by: Ekaterina Nikonova <enikonovad@gmail.com>

--- a/tests/data/jinja/profile_to_docs_only_some_sections.md.jinja
+++ b/tests/data/jinja/profile_to_docs_only_some_sections.md.jinja
@@ -8,8 +8,7 @@ group_title,
 'objective':'Control Objective Header'
 },
 label_column=True,
-add_group_to_title=True,
-param_dict={'ac-2_prm_1': 'AC-2 Test'}
+add_group_to_title=True
 )
 | safe
 }}
