--- a/tests/data/jinja/profile_to_docs_with_subparts.md.jinja
+++ b/tests/data/jinja/profile_to_docs_with_subparts.md.jinja
@@ -8,11 +8,11 @@ group_title,
 'objective':'Control Objective Header',
 'ImplGuidance': "The implementation guidance",
 'above_the_line_guidance': "The above the line guidance",
+'add_to_part_a': 'Add to part a',
 'evidence_guidance': "Evidence Guidance"
 },
 label_column=True,
-add_group_to_title=True,
-param_dict={'ac-2_prm_1': 'AC-2 Test'}
+add_group_to_title=True
 )
 | safe
 }}
