--- a/tests/data/jinja/profile_to_docs.md.jinja
+++ b/tests/data/jinja/profile_to_docs.md.jinja
@@ -7,6 +7,10 @@ control_writer.write_control_with_sections(control, profile, group_title,
 'objective':'Control Objective Header',
 'ExpectedEvidence':'Control Expected Evidence Header',
 'ImplGuidance':'Implementation Guidance',
-'table_of_parameters':'Table of Control Parameters'}
+'table_of_parameters':'Table of Control Parameters'
+},
+label_column=True,
+add_group_to_title=True
 )
+| safe
 }}
