--- a/tests/data/jinja/profile_to_docs_with_group_title.md.jinja
+++ b/tests/data/jinja/profile_to_docs_with_group_title.md.jinja
@@ -12,8 +12,7 @@ group_title,
 'table_of_parameters':'Table of Control Parameters'
 },
 label_column=True,
-add_group_to_title=True,
-param_dict={'ac-2_prm_1': 'AC-2 Test'}
+add_group_to_title=True
 )
 | safe
 }}
