--- a/tests/data/jinja/profile_to_docs.md.jinja
+++ b/tests/data/jinja/profile_to_docs.md.jinja
@@ -2,15 +2,14 @@
 
 {{
 control_writer.write_control_with_sections(control, profile, group_title,
-['statement', 'objective', 'ExpectedEvidence', 'ImplGuidance', 'table_of_parameters'],
+['statement', 'objective', 'ExpectedEvidence', 'guidance', 'table_of_parameters'],
 {'statement':'Statement Header',
 'objective':'Control Objective Header',
-'ExpectedEvidence':'Control Expected Evidence Header',
-'ImplGuidance':'Implementation Guidance',
+'guidance':'Implementation Guidance',
 'table_of_parameters':'Table of Control Parameters'
 },
 label_column=True,
-add_group_to_title=True
+add_group_to_title=False
 )
 | safe
 }}
