--- a/tests/data/jinja/profile_to_docs_only_some_sections.md.jinja
+++ b/tests/data/jinja/profile_to_docs_only_some_sections.md.jinja
@@ -3,9 +3,9 @@
 {{ control_writer.write_control_with_sections(control,
 profile,
 group_title,
-['objective'],
+['statement'],
 {
-'objective':'Control Objective Header'
+'statement': 'Control Statement Header'
 },
 label_column=True,
 add_group_to_title=True
